fix: solve hamburger button overlapping issue

--- a/css/style.css
+++ b/css/style.css
@@ -139,14 +139,13 @@ li {
   justify-content: space-between;
   align-items: center;
   position: fixed;
-  top: 0;
   left: 0;
-  z-index: 999;
-  transform: translateY(-100%);
-  transition: transform 0.4s ease;
+  z-index: 2000;
+  top: -80px;
+  transition: top 0.4s ease;
 }
 .header.is-show {
-  transform: translateY(0);
+  top: 0;
 }
 .header h1 {
   font-size: 26px;
@@ -180,7 +179,12 @@ li {
   cursor: pointer;
   display: none;
   position: relative;
-  z-index: 1001;
+  z-index: 3000;
+}
+.hamburger.active {
+  position: fixed;
+  top: 13px;
+  right: 20px;
 }
 .hamburger span {
   background-color: var(--white);
@@ -188,13 +192,15 @@ li {
   height: 2.5px;
   border-radius: 4px;
   position: absolute;
+  backface-visibility: hidden;
+  transform: translateZ(0);
   transition:
     transform 0.4s ease,
     opacity 0.4s ease,
     background-color 0.2s ease;
 }
 .hamburger:hover span {
-  background: var(--accent-color);
+  background-color: var(--accent-color);
 }
 .hamburger span:nth-child(1) {
   top: 0px;
@@ -222,7 +228,7 @@ li {
   visibility: hidden;
   position: fixed;
   inset: 0;
-  z-index: 1000;
+  z-index: 2500;
   transition: opacity 0.4s ease;
 }
 .hamburger-menu.active {
@@ -318,6 +324,16 @@ li {
 }
 .main-visual .fa-arrow-down {
   color: var(--white);
+  animation: bounce 1s infinite;
+}
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(4px);
+  }
 }
 
 /* about */
@@ -408,7 +424,7 @@ li {
   bottom: 20px;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.2s ease;
+  transition: opacity 0.4s ease;
 }
 .to-top i {
   font-size: 130%;
